adding the blog post

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -13,19 +13,19 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="description" content="SeamlessAccess.org is a service designed to help foster a more streamlined online access experience when using scholarly collaboration tools, information resources, and shared research infrastructure. The service promotes digital authentication leveraging an existing single-sign-on infrastructure through one’s home institution, while maintaining an environment that protects personal data and privacy.
-SeamlessAccess.org aims to enable simple, trusted use of scholarly resources and services anytime, anywhere, and on any device.
+SeamlessAccess.org aims to enable simple, trusted use of scholarly resources and services anytime, anywhere, and on any device..
 Governance of this service is through the Coalition for Seamless Access, a collaboration between five organizations&ndash;GÉANT, Internet2, the National Information Standards Organization (NISO), ORCID, and the International Association of STM Publishers (STM).">
   <meta property="og:title" content="About Syna &amp;middot; Okkur - Syna">
   <meta property="og:url" content="/about/">
   <meta property="og:description" content="SeamlessAccess.org is a service designed to help foster a more streamlined online access experience when using scholarly collaboration tools, information resources, and shared research infrastructure. The service promotes digital authentication leveraging an existing single-sign-on infrastructure through one’s home institution, while maintaining an environment that protects personal data and privacy.
-SeamlessAccess.org aims to enable simple, trusted use of scholarly resources and services anytime, anywhere, and on any device.
+SeamlessAccess.org aims to enable simple, trusted use of scholarly resources and services anytime, anywhere, and on any device..
 Governance of this service is through the Coalition for Seamless Access, a collaboration between five organizations&ndash;GÉANT, Internet2, the National Information Standards Organization (NISO), ORCID, and the International Association of STM Publishers (STM).">
   <meta property="og:site_name" content="Okkur - Syna">
   <meta property="og:type" content="website">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="About Syna &amp;middot; Okkur - Syna" />
   <meta name="twitter:description" content="SeamlessAccess.org is a service designed to help foster a more streamlined online access experience when using scholarly collaboration tools, information resources, and shared research infrastructure. The service promotes digital authentication leveraging an existing single-sign-on infrastructure through one’s home institution, while maintaining an environment that protects personal data and privacy.
-SeamlessAccess.org aims to enable simple, trusted use of scholarly resources and services anytime, anywhere, and on any device.
+SeamlessAccess.org aims to enable simple, trusted use of scholarly resources and services anytime, anywhere, and on any device..
 Governance of this service is through the Coalition for Seamless Access, a collaboration between five organizations&ndash;GÉANT, Internet2, the National Information Standards Organization (NISO), ORCID, and the International Association of STM Publishers (STM).">
   <meta name="twitter:url" content="/about/" />
         <meta property="og:image" content="">
@@ -54,7 +54,7 @@ Governance of this service is through the Coalition for Seamless Access, a colla
     <!-- Navigation --><nav class="overlay fragment navbar navbar-expand-lg py-2 scroll-spy bg-light navbar-light" id="nav" role="navigation">
   <div class="container">
       <a class="navbar-brand py-0" href="/#">
-        <img src="/images/logo.svg" height="35" class="d-inline-block align-top" alt="Syna">
+        <img src="/images/logo-color.png" height="35" class="d-inline-block align-top" alt="SeamlessAccess">
       </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -69,6 +69,11 @@ Governance of this service is through the Coalition for Seamless Access, a colla
               <a href="/about"
                   class="nav-link active default-active">
                 About Us
+              </a>
+            </li><li class="nav-item">
+              <a href="/blog"
+                  class="nav-link">
+                Blog
               </a>
             </li><li class="nav-item">
               <a href="/#contact"
@@ -105,7 +110,7 @@ Governance of this service is through the Coalition for Seamless Access, a colla
   </div>
 <div class="col-12 content px-0 text-body"><p>SeamlessAccess.org is a service designed to help foster a more streamlined online access experience when using scholarly collaboration tools, information resources, and shared research infrastructure. The service promotes digital authentication leveraging an existing single-sign-on infrastructure through one’s home institution, while maintaining an environment that protects personal data and privacy.</p>
 
-<p>SeamlessAccess.org aims to enable simple, trusted use of scholarly resources and services anytime, anywhere, and on any device.</p>
+<p>SeamlessAccess.org aims to enable simple, trusted use of scholarly resources and services anytime, anywhere, and on any device..</p>
 
 <p>Governance of this service is through the Coalition for Seamless Access, a collaboration between five organizations&ndash;<a href="https://geant.org">GÉANT</a>, <a href="https://internet2.edu">Internet2</a>, the National Information Standards Organization (<a href="https://niso.org">NISO</a>), <a href="https://orcid.org">ORCID</a>, and the International Association of STM Publishers (<a href="https://stm-assoc.org">STM</a>).</p>
 
@@ -146,7 +151,7 @@ Governance of this service is through the Coalition for Seamless Access, a colla
     <div class="col-md m-2 text-body">
         <h4></h4>
         <a href="#">
-          <img src="/images/logo.svg" class="img-fluid w-50" alt="Logo Subtext">
+          <img src="/images/logo-color.png" class="img-fluid w-50" alt="Logo Subtext">
         </a>
         <div class="row justify-content-left ml-0">
             <span class="fa-stack fa-2x mt-3 mr-1" title="facebook">
